# ghaw-auditor

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamlignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: pr.yml
ghaw_auditor/: __init__.py  analyzer.py  cache.py  cli.py  differ.py  factory.py  github_client.py  models.py  parser.py  policy.py  renderer.py  resolver.py  scanner.py  services.py
tests/: __init__.py  test_analyzer.py  test_cache.py  test_cli.py  test_differ.py  test_factory.py  test_github_client.py  test_golden.py  test_models.py  test_parser.py  test_policy.py  test_renderer.py  test_resolver.py  test_scanner.py  test_services.py
tests/fixtures/: action-with-defaults.yml  basic-workflow.yml  complex-workflow.yml  composite-action.yml  docker-action.yml  empty-workflow-call.yml  invalid-action.yml  javascript-action.yml  job-with-outputs.yml  reusable-workflow-caller.yml  reusable-workflow.yml
tests/golden/: actions.json  report.md  workflows.json
