[project]
name = "ghaw-auditor"
version = "1.0.0"
description = "GitHub Actions & Workflows Auditor - analyze and audit GitHub Actions ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ismo Vuorinen", email = "ismo@ivuorinen.net"}
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "ruamel.yaml>=0.18.0",
    "platformdirs>=4.2.0",
    "diskcache>=5.6.0",
    "packaging>=24.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "vcrpy>=6.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-PyYAML",
]

[project.scripts]
ghaw-auditor = "ghaw_auditor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C90"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"ghaw_auditor/cli.py" = ["B008"]  # Typer uses function calls in defaults

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=ghaw_auditor --cov-report=term-missing --cov-fail-under=70"
